# noemata

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gather_data.rs  github_api.rs  lib.rs  main.rs  parameter.rs  plugin_cache.rs  plugin_data.rs
src/assets/: plugins.json
src/components/grid/: Grid.tsx  PluginNode.tsx  SingleHandle.tsx  StartNode.tsx  TrialEdge.tsx  grid.css
src/components/sidebar/: PluginAccordion.tsx  PluginBox.tsx  SidebarContainer.tsx  sidebar.css  sidebarTypes.d.ts
src/services/: repoServices.ts
